--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 html{
     font-size: 62.5%;
@@ -10,11 +12,45 @@ html{
 .navStyle{
     width: 100%;
     min-height:10vh ;
-    background: red;
+    background: rgb(89,136,139);
+    background: linear-gradient(317deg, rgb(62, 94, 96) 0%, rgba(48,77,94,1) 100%);
 }
 nav{
     width: 98%;
     min-height: 10vh;
     margin: auto;
-    background: blue;
+    color: white;
+}
+nav a{
+    color: white;
+}
+h1{
+    font-size: 3rem;
+}
+
+h2{
+    font-size: 2.8rem;
+}
+h3{
+    font-size: 2.8rem;
+}
+p,a{
+    font-size: 2.5rem;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+}
+nav ul{
+    display: flex;
+    flex: 1 1 30rem;
+    justify-content: space-between;
+}
+nav h1{
+    display: flex;
+    flex: 1 1 30rem;
+}
+.hero{
+    min-height: 90vh;
 }
