--- a/style.css
+++ b/style.css
@@ -10,16 +10,21 @@ html{
 }
 
 .navStyle{
+    position: relative;
     width: 100%;
     min-height:10vh ;
     background: rgb(89,136,139);
-    background: linear-gradient(317deg, rgb(62, 94, 96) 0%, rgba(48,77,94,1) 100%);
+    background: linear-gradient(317deg, rgb(119, 169, 173) 0%, rgb(93, 136, 161) 100%);
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    z-index: 100;
 }
 nav{
+    position: relative;
     width: 95%;
     min-height: 10vh;
     margin: auto;
     color: white;
+    
 }
 nav a{
     color: white;
