--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ html{
 }
 
 .navStyle{
-    position: relative;
+    position: fixed;
     width: 100%;
-    min-height:10vh ;
+    min-height:10vh;
     background: rgb(89,136,139);
     background: linear-gradient(317deg, rgb(119, 169, 173) 0%, rgb(93, 136, 161) 100%);
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
@@ -34,7 +34,7 @@ h1{
 }
 
 h2{
-    font-size: 2.8rem;
+    font-size: 2.5rem;
 }
 h3{
     font-size: 2.8rem;
@@ -58,7 +58,7 @@ nav h1{
 }
 .hero{
     position: relative;
-    min-height: 90vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -93,7 +93,7 @@ nav h1{
     text-shadow: rgb(3, 5, 16) 1px 0 10px;
 }
 
-#pachete a{
+.pachete a{
     text-shadow: rgb(3, 5, 16) 1px 0 10px;
     transition: all 0.5s ease-in-out;
     margin-left: 15px;
@@ -101,14 +101,91 @@ nav h1{
 }
 
 
-#pachete:hover{
+.pachete:hover{
     transition: all 0.5s ease-in-out  ;
-    
     border-radius: 3rem;
     background: rgb(25, 70, 83);
     text-align: center;
 }
 
 #despre{
+    position: relative;
     min-height: 100vh;
+    background: rgb(27,42,43);
+    background: linear-gradient(317deg, rgb(53, 86, 88) 0%, rgba(19,30,37,1) 100%);
+    display: flex;
+    flex-direction: column;
+
 }
+
+.imgs img{
+    width: 20rem;
+    height: 30rem;
+    object-fit: cover;
+    flex: 1 1 60rem;
+   
+}
+.imgs{
+    display: flex;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+
+    
+}
+.despreText{
+    width: 80%;
+    margin: auto;
+    color: white;
+}
+
+.despreText h1{
+    text-align: center;
+}
+.despreText p{
+    padding-top: 2rem;
+}
+
+#contact{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(317deg, rgb(15, 24, 25) 0%, rgba(19,30,37,1) 100%);
+}
+
+.contact{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    text-align: center;
+    color: white;
+    height: 60rem;
+    background: linear-gradient(317deg, rgb(56, 91, 95) 0%, rgb(43, 69, 85) 100%);
+    border-radius: 3rem;
+    align-items: center;
+    justify-content: center;
+}
+.contact p{
+    padding-top: 3rem;
+}
+.contact img{
+    margin-top: 10rem;
+    width: 300px;
+    border-radius: 3rem;
+}
+
+#pachete{
+    display: flex;
+    text-align: center;
+    background: linear-gradient(317deg, rgb(56, 91, 95) 0%, rgb(43, 69, 85) 100%);
+    color: white;
+}
+
+form{
+    color: white;
+    border: 5px inset;
+      border-radius: 100px;
+      padding: 100px;
+      text-align: center; 
+      font-family: serif;
+}    
